Refactorings and improvements

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -9,5 +9,9 @@
     "required_entity_missing": "A required entity %entity% is not set",
     "required_entity_not_found": "A required entity %entity% is not found",
     "force_native_time_picker_for_device": "Force the native time picker in this browser"
+  },
+  "card": {
+    "alarm_mode": "Alarm Mode",
+    "alarm_duration": "Alarm Duration"
   }
 }
