Adds option for external override of alarm time

--- a/src/localize/languages/de.json
+++ b/src/localize/languages/de.json
@@ -3,6 +3,7 @@
     "optional": "Optional",
     "name": "Titel",
     "time_entity": "Zeit-Entität",
+    "override_time_entity": "Zeit-Überschreibungs-Entität",
     "mode_entity": "Modus-Entität",
     "duration_entity": "Dauer-Entität",
     "invalid_configuration": "Ungültige Konfiguration",
